<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_gradient"
    tools:context=".views.RegistrarActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_height="174dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/register_imageview"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clipboard" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952">


        <EditText
            android:id="@+id/Nombre"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_edittext_corners"
            android:gravity="center_horizontal"
            android:hint="@string/introduzca_su_nombre"
            android:importantForAutofill="no"
            android:inputType=""
            android:textAlignment="center"
            tools:ignore="LabelFor" />


        <EditText
            android:id="@+id/Apellido"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edittext_corners"
            android:gravity="center_horizontal"
            android:hint="@string/introduzca_su_apellido"
            android:importantForAutofill="no"
            android:inputType=""
            android:textAlignment="center"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/UsuarioRegistro"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext_corners"
            android:gravity="center_horizontal"
            android:hint="@string/introduzca_su_usuario"
            android:inputType=""
            android:textAlignment="center"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/PasswordRegistro"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext_corners"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/introduzca_su_contraseña"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/ProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/Registro"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_register"
            android:onClick="crearUsuarios"
            android:text="@string/registrarse"
            android:textAllCaps="false"
            android:textSize="23sp"
            android:textStyle="italic" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

