<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".views.MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="220dp"
        android:layout_height="174dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/cornerstextview"
        app:layout_constraintBottom_toTopOf="@+id/Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/camera_foreground" />


    <EditText
        android:id="@+id/Username"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:autofillHints="no"
        android:background="@drawable/rounded_edittext_corners"
        android:gravity="center_horizontal"
        android:hint="@string/introduzca_su_usuario"
        android:inputType=""
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.984"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext_corners"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/introduzca_su_contraseña"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/forgotPassword"
        app:layout_constraintTop_toBottomOf="@id/Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="128dp"
        android:background="@android:color/transparent"
        android:onClick="olvidarContra"
        android:text="@string/olvidaste_tu_contrase_a"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/SingIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/SingIn"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cornerstextview"
        android:onClick="Ingresar"
        android:text="@string/sing_in"
        android:textAllCaps="false"
        android:textSize="23sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/Registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Registrar"
        android:layout_width="395dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:onClick="Registrarse"
        android:text="@string/no_tienes_cuenta_registrate"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />


</androidx.constraintlayout.widget.ConstraintLayout>

