<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#d7ccc8"
    tools:context=".views.forgotPass">

    <ImageView
        android:id="@+id/paisaje"
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:background="@drawable/relax"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466">

        <EditText
            android:id="@+id/recuperarContra"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/rounded_edittext_corners"
            android:gravity="center_horizontal"
            android:hint="@string/ingrese_su_correo"
            android:importantForAutofill="no"
            android:inputType=""
            android:textAlignment="center"
            android:textSize="23sp"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/Recover"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/forgotgradient"
            android:onClick="send"
            android:text="@string/enviar_contrase_a"
            android:textAllCaps="false"
            android:textSize="23sp"
            android:textStyle="italic" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>